# RyzenAdjIndicator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  config.json
app/src/: Client.cpp  Client.hpp  Config.cpp  Config.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp
cmake/: FindAPPINDICATOR.cmake
daemon/: CMakeLists.txt  test_client.py
daemon/src/: Main.cpp  RyzenAdjService.cpp  RyzenAdjService.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp
